Cambios de texto

--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
             alt="Logo de Simon Dice" id="logoJuego" class="logo-image"/>
     </div>
     <h1>Bienvenido a Quixo Dice </h1>
-    <p id="p1">¡Prepárate para un desafío de memoria y destreza!<br>
+    <p id="p1">
+      <span class="blue-bold">¡Prepárate para un desafío de memoria y destreza!</span><br>
       El objetivo es seguir la secuencia de colores que se mostrará en pantalla.<br>
-     Cada vez que aciertes, la secuencia se volverá más larga y desafiante.<br>
-       ¿Cuánto tiempo podrás recordar la secuencia?</p>
+      Cada vez que aciertes, la secuencia se volverá más larga y desafiante.<br>
+      <span class="blue-bold">¡Anímate y logra la secuencia más larga!</span>
+    </p>
     <div id="estadoJuego">Estado del juego aquí</div>
     <div id="ronda"></div>
     <button id="botonEmpezar">Empecemos</button>
