--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="estilos.css">   
+    <link rel="stylesheet" href="estilos.css">
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@700&display=swap" rel="stylesheet">      
     <title>Quixo Dice</title>
 </head>
 <body>
@@ -21,7 +22,7 @@
       Cada vez que aciertes, la secuencia se volverá más larga y desafiante.<br>
       <span class="blue-bold">¡Anímate y logra la secuencia más larga!</span>
     </p>
-    <div id="estadoJuego">Estado del juego aquí</div>
+    <div id="estadoJuego" class="estado-juego">Estado del juego aquí</div>
     <div id="ronda"></div>
     <button id="botonEmpezar">Empecemos</button>
     <div class="contenedorJuego">
