--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
       Cada vez que aciertes, la secuencia se volverá más larga y desafiante.<br>
       <span class="blue-bold">¡Anímate y logra la secuencia más larga!</span>
     </p>
-    <div id="estadoJuego" class="estado-juego">Estado del juego aquí</div>
+    <div class="contenedorEstado">
+      <div id="estadoJuego" class="estado-juego">Estado del juego aquí</div>
+    </div>
     <div id="ronda"></div>
     <button id="botonEmpezar">Empecemos</button>
     <div class="contenedorJuego">
