--- a/index.html
+++ b/index.html
@@ -15,17 +15,19 @@
         <img src="//img1.wsimg.com/isteam/ip/96ac62c5-7749-4eaa-b32c-e83af1e0003f/logo3.png/:/rs=h:120,cg:true,m/qt=q:95"
             alt="Logo de Simon Dice" id="logoJuego" class="logo-image"/>
     </div>
-    <h1>Bienvenido a Quixo Dice </h1>
-    <p id="p1">
-      <span class="blue-bold">¡Prepárate para un desafío de memoria y destreza!</span><br>
-      El objetivo es seguir la secuencia de colores que se mostrará en pantalla.<br>
-      Cada vez que aciertes, la secuencia se volverá más larga y desafiante.<br>
-      <span class="blue-bold">¡Anímate y logra la secuencia más larga!</span>
-    </p>
-    <div class="contenedorEstado">
-      <div id="estadoJuego" class="estado-juego">Estado del juego aquí</div>
+    <div class="contenedorCompleto">
+      <h1>Bienvenido a Quixo Dice </h1>
+      <p id="p1">
+        <span class="blue-bold">¡Prepárate para un desafío de memoria y destreza!</span><br>
+        El objetivo es seguir la secuencia de colores que se mostrará en pantalla.<br>
+        Cada vez que aciertes, la secuencia se volverá más larga y desafiante.<br>
+        <span class="blue-bold">¡Anímate y logra la secuencia más larga!</span>
+      </p>
+      <div class="contenedorEstado">
+        <div id="estadoJuego" class="estado-juego">Estado del juego aquí</div>
+      </div>
+      <div id="ronda"></div>
     </div>
-    <div id="ronda"></div>
     <button id="botonEmpezar">Empecemos</button>
     <div class="contenedorJuego">
         <div class="circulo" class="circuloInteractivo">
