--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
         <img src="//img1.wsimg.com/isteam/ip/96ac62c5-7749-4eaa-b32c-e83af1e0003f/logo3.png/:/rs=h:120,cg:true,m/qt=q:95"
             alt="Logo de Simon Dice" id="logoJuego" class="logo-image"/>
     </div>
+    <div id="audioPermissionModal" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.7); display: flex; justify-content: center; align-items: center; z-index: 9999;">
+      <div style="background-color: white; padding: 20px; text-align: center; border-radius: 8px;">
+          <h2>Permitir sonidos</h2>
+          <p>Este juego utiliza sonidos. Haz clic en "Aceptar" para habilitar los sonidos durante el juego.</p>
+          <button id="acceptAudio" style="padding: 10px 20px; background-color: #4CAF50; color: white; border: none; border-radius: 5px; cursor: pointer;">Aceptar</button>
+      </div>
+  </div>
     <h1>Bienvenido a Quixo Dice </h1>
     <p id="p1">
       <span class="blue-bold">¡Prepárate para un desafío de memoria y destreza!</span><br>
