--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
     </div>
     <div id="ronda"></div>
     <button id="botonEmpezar">Empecemos</button>
+    <div id="debug" style="color: red; font-weight: bold; margin-top: 20px;"></div>
+
     <div class="contenedorJuego">
         <div class="circulo" class="circuloInteractivo">
           <div id="figura">
